# mai8_OOP3

./: CMakeLists.txt  main.cpp
include/: figure.h  pentagon.h  rhombus.h  trapezoid.h
src/: figure.cpp  pentagon.cpp  rhombus.cpp  trapezoid.cpp
test/: test_figures.cpp
